[ADD] Replication of the movement
Done#6

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprint/GameInstance/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/Levels/L_Test.L_Test
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/GameMode/GM_Master.GM_Master_C
