--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,6 +45,7 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Mobile.AntiAliasing=3
 r.AntiAliasingMethod=3
+r.Mobile.EnableNoPrecomputedLightingCSMShader=False
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bBuildForES31=False
