--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Environment Variables
-      shell: cmd
+      shell: pwsh
       run: |
-        set UE_ENGINE_PATH=D:\Software\UE_5.4
-        set PROJECT_PATH=%GITHUB_WORKSPACE%\ErethiaUnreal.uproject
+        "UE_ENGINE_PATH=D:\Software\UE_5.4" | Out-File -FilePath $env:GITHUB_ENV -Append
+        "PROJECT_PATH=${{ github.workspace }}\ErethiaUnreal.uproject" | Out-File -FilePath $env:GITHUB_ENV -Append
 
     - name: Generate Project Files
       shell: cmd
@@ -30,8 +30,9 @@ jobs:
         "%UE_ENGINE_PATH%\Engine\Build\BatchFiles\GenerateProjectFiles.bat" "%PROJECT_PATH%"
 
     - name: Build Project (Development)
+      shell: cmd
       run: |
-        & "$Env:UE_ENGINE_PATH\Engine\Build\BatchFiles\Build.bat" ErethiaUnrealEditor Win64 Development "$Env:PROJECT_PATH"
+        "%UE_ENGINE_PATH%\Engine\Build\BatchFiles\Build.bat" ErethiaUnrealEditor Win64 Development "%PROJECT_PATH%"
 
     - name: Package Project
       run: |
