--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main, project-build ]
 
+# Je vais changer ça après pour qu'on puisse build en release sur main
+# et en dev sur project-build ou une autre branche
+env:
+  BUILD_CONFIG: Development  # Development/Shipping
+
 jobs:
   build:
     name: Build Project
@@ -24,23 +29,25 @@ jobs:
         "UE_ENGINE_PATH=D:\Software\UE_5.4" | Out-File -FilePath $env:GITHUB_ENV -Append
         "PROJECT_PATH=${{ github.workspace }}\ErethiaUnreal.uproject" | Out-File -FilePath $env:GITHUB_ENV -Append
 
-    - name: Generate Project Files
+    - name: Cook & Package (${{ env.BUILD_CONFIG }})
+      if: env.BUILD_CONFIG == 'Shipping'
       shell: cmd
       run: |
-        "%UE_ENGINE_PATH%\Engine\Build\BatchFiles\GenerateProjectFiles.bat" "%PROJECT_PATH%"
+        "%UE_ENGINE_PATH%\Engine\Build\BatchFiles\RunUAT.bat" BuildCookRun ^
+          -project="%PROJECT_PATH%" ^
+          -noP4 -platform=Win64 -clientconfig=Shipping -serverconfig=Shipping ^
+          -cook -allmaps -compressed -build -stage -pak -archive -prereqs -nodebuginfo ^
+          -archivedirectory="%GITHUB_WORKSPACE%\BuildRelease"
 
-    - name: Build Project (Development)
+    - name: Cook & Package (${{ env.BUILD_CONFIG }})
+      if: env.BUILD_CONFIG == 'Development'
       shell: cmd
       run: |
-        "%UE_ENGINE_PATH%\Engine\Build\BatchFiles\Build.bat" ErethiaUnrealEditor Win64 Development "%PROJECT_PATH%"
-
-    - name: Package Project
-      run: |
-        & "$Env:UE_ENGINE_PATH\Engine\Build\BatchFiles\RunUAT.bat" BuildCookRun ^
-          -project="$Env:PROJECT_PATH" ^
+        "%UE_ENGINE_PATH%\Engine\Build\BatchFiles\RunUAT.bat" BuildCookRun ^
+          -project="%PROJECT_PATH%" ^
           -noP4 -platform=Win64 -clientconfig=Development -serverconfig=Development ^
           -cook -allmaps -build -stage -pak -archive ^
-          -archivedirectory="${{ github.workspace }}\BuildOutput"
+          -archivedirectory="%GITHUB_WORKSPACE%\BuildDev"
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
