--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,11 @@ jobs:
         "UE_ENGINE_PATH=D:\Software\UE_5.4" | Out-File -FilePath $env:GITHUB_ENV -Append
         "PROJECT_PATH=${{ github.workspace }}\ErethiaUnreal.uproject" | Out-File -FilePath $env:GITHUB_ENV -Append
 
+    - name: Build Unreal Engine Editor (Blueprint Projects)
+      shell: cmd
+      run: |
+        "%UE_ENGINE_PATH%\Engine\Build\BatchFiles\Build.bat" UnrealEditor Win64 Development
+
     - name: Cook & Package (${{ env.BUILD_CONFIG }})
       shell: cmd
       run: |
