--- a/.github/workflows/test-blueprints.yml
+++ b/.github/workflows/test-blueprints.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup Environment Variables
       shell: powershell
       run: |
-        "UE_ENGINE_PATH=C:\Program Files\Epic Games\UE_5.4" | Out-File -FilePath $env:GITHUB_ENV -Append
+        "UE_ENGINE_PATH=$Env:UE_ENGINE_PATH" | Out-File -FilePath $env:GITHUB_ENV -Append
         "PROJECT_PATH=${{ github.workspace }}\ErethiaUnreal.uproject" | Out-File -FilePath $env:GITHUB_ENV -Append
 
     - name: Run Blueprint Automation Tests
