[ADD] plugin for testing

--- a/ErethiaUnreal.uproject
+++ b/ErethiaUnreal.uproject
@@ -52,6 +52,26 @@
 				"Mac",
 				"Linux"
 			]
+		},
+		{
+			"Name": "AutomationDriverTests",
+			"Enabled": true
+		},
+		{
+			"Name": "EditorTests",
+			"Enabled": true
+		},
+		{
+			"Name": "RHITests",
+			"Enabled": true
+		},
+		{
+			"Name": "RuntimeTests",
+			"Enabled": true
+		},
+		{
+			"Name": "TestSamples",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
