testing env var stuff

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Setup Environment Variables
       shell: powershell
       run: |
+        "UE_ENGINE_PATH=$Env:UE_ENGINE_PATH" | Out-File -FilePath $env:GITHUB_ENV -Append
         "PROJECT_PATH=${{ github.workspace }}\ErethiaUnreal.uproject" | Out-File -FilePath $env:GITHUB_ENV -Append
 
     - name: Build Unreal Engine Editor (Blueprint Projects)
