--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Show resolved Unreal Engine path
       shell: powershell
-      run: echo "🎮 UE_ENGINE_PATH: $Env:UE_ENGINE_PATH"
+      run: echo "UE_ENGINE_PATH: $Env:UE_ENGINE_PATH"
 
     - name: Build Unreal Engine Editor (Blueprint Projects)
       shell: cmd
