--- a/.github/workflows/test-blueprints.yml
+++ b/.github/workflows/test-blueprints.yml
@@ -24,7 +24,8 @@ jobs:
 
     - name: Show resolved Unreal Engine path
       shell: powershell
-      run: echo "UE_ENGINE_PATH: $Env:UE_ENGINE_PATH"
+      run: |
+        Write-Host "UE_ENGINE_PATH: $Env:UE_ENGINE_PATH"
 
     - name: Run Blueprint Automation Tests
       shell: powershell
