--- a/.github/workflows/test-blueprints.yml
+++ b/.github/workflows/test-blueprints.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Show resolved Unreal Engine path
       shell: powershell
       run: |
-        Write-Host "UE_ENGINE_PATH: $Env:UE_ENGINE_PATH"
+        Write-Host "Env var UE_ENGINE_PATH: $Env:UE_ENGINE_PATH"
 
     - name: Run Blueprint Automation Tests
       shell: powershell
