--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,9 +53,12 @@ jobs:
           %FLAGS% ^
           -archivedirectory="%GITHUB_WORKSPACE%\Build%BUILD_CONFIG%"
 
-    - name: Upload Build Artifact
+    - name: List files in build folder
+      run: |
+        dir Build${{ env.BUILD_CONFIG }}\Windows\*
+
+    - name: Upload Packaged Build
       uses: actions/upload-artifact@v4
       with:
-        name: UE5-Build
-        path: BuildOutput
-        if-no-files-found: warn
+        name: Packaged-Build-${{ env.BUILD_CONFIG }}
+        path: Build${{ env.BUILD_CONFIG }}
