--- a/.github/workflows/weekly-iteration.yml
+++ b/.github/workflows/weekly-iteration.yml
@@ -39,11 +39,11 @@ jobs:
           echo "branch_name=iteration-${today}-to-${next_thursday}" >> $GITHUB_ENV
           echo "previous_branch_name=iteration-${last_thursday}-to-${today}" >> $GITHUB_ENV
 
-      - name: Create new iteration branch
+      - name: Create new iteration branch (fallback)
         run: |
           git fetch origin
           git checkout -b $branch_name origin/Dev
-          git push origin $branch_name
+          git push https://${{ secrets.ORG_PAT }}@github.com/Erethia-Education-Quest/Erethia-Unreal.git $branch_name
           echo "✅ Created new branch: $branch_name"
 
       - name: Check if previous iteration branch exists
