--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprint/GameInstance/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/Levels/L_Test.L_Test
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprint/GameMode/GM_Master.GM_Master_C
+GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
