--- a/ErethiaUnreal.uproject
+++ b/ErethiaUnreal.uproject
@@ -72,6 +72,10 @@
 		{
 			"Name": "TestSamples",
 			"Enabled": true
+		},
+		{
+			"Name": "FunctionalTestingEditor",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
