--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprint/GameInstance/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/Levels/L_Test.L_Test
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
+GlobalDefaultGameMode=/Game/Blueprint/GameMode/GM_Game.GM_Game_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
