--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprint/GameInstance/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Levels/L_Test.L_Test
+GameDefaultMap=/Game/Levels/L_MainMenu.L_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/GameMode/GM_Game.GM_Game_C
 GlobalDefaultServerGameMode=None
