--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -100,7 +100,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="L_MainMenu")
-+MapsToCook=(FilePath="L_Level1")
++MapsToCook=(FilePath="L_Leo")
 +MapsToCook=(FilePath="L_Transition")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
