--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,6 +46,7 @@ r.ReflectionMethod=1
 r.Mobile.AntiAliasing=3
 r.AntiAliasingMethod=3
 r.Mobile.EnableNoPrecomputedLightingCSMShader=False
+r.CustomDepth=3
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bBuildForES31=False
