added blocklights & updated some lighting parameters

--- a/ErethiaUnreal.uproject
+++ b/ErethiaUnreal.uproject
@@ -76,6 +76,10 @@
 		{
 			"Name": "FunctionalTestingEditor",
 			"Enabled": true
+		},
+		{
+			"Name": "HDRIBackdrop",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
