--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -100,8 +100,10 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="L_MainMenu")
-+MapsToCook=(FilePath="L_Leo")
++MapsToCook=(FilePath="L_MainLevel")
 +MapsToCook=(FilePath="L_Transition")
++MapsToCook=(FilePath="L_Lobby")
++MapsToCook=(FilePath="L_TestTheo")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
