--- a/ErethiaUnreal.uproject
+++ b/ErethiaUnreal.uproject
@@ -80,6 +80,11 @@
 		{
 			"Name": "HDRIBackdrop",
 			"Enabled": true
+		},
+		{
+			"Name": "EasyFileDialog",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/bcf64fe2e00c48189d8385a9c39b6e61"
 		}
 	],
 	"TargetPlatforms": [
