[FIX] Settings and piedestal decal

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprint/GameInstance/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Levels/L_MainMenu.L_MainMenu
+GameDefaultMap=/Game/Levels/L_lobby_room.L_lobby_room
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/GameMode/GM_Game.GM_Game_C
 GlobalDefaultServerGameMode=None
@@ -122,3 +122,4 @@ SteamDevAppId=480
  
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
