--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -99,11 +99,11 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="L_MainMenu")
 +MapsToCook=(FilePath="L_MainLevel")
 +MapsToCook=(FilePath="L_Transition")
 +MapsToCook=(FilePath="L_Lobby")
 +MapsToCook=(FilePath="L_TestTheo")
++MapsToCook=(FilePath="L_lobby_room")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
