--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -14,7 +14,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
