--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -113,5 +113,16 @@ DefaultTouchInterface=None
 +DefaultMappingContexts=(InputMappingContext="/Game/VRTemplate/Input/IMC_Menu.IMC_Menu",Priority=0,bAddImmediately=True,bRegisterWithUserSettings=False)
 +DefaultMappingContexts=(InputMappingContext="/Game/VRTemplate/Input/IMC_Weapon_Left.IMC_Weapon_Left",Priority=0,bAddImmediately=True,bRegisterWithUserSettings=False)
 +DefaultMappingContexts=(InputMappingContext="/Game/VRTemplate/Input/IMC_Weapon_Right.IMC_Weapon_Right",Priority=0,bAddImmediately=True,bRegisterWithUserSettings=False)
++DefaultMappingContexts=(InputMappingContext="/Game/IMC/IMC_Keyboard.IMC_Keyboard",Priority=0,bAddImmediately=True,bRegisterWithUserSettings=False)
++DefaultMappingContexts=(InputMappingContext="/Game/IMC/IMC_KeyboardMenu.IMC_KeyboardMenu",Priority=0,bAddImmediately=True,bRegisterWithUserSettings=False)
+UserSettingsClass=/Script/EnhancedInput.EnhancedInputUserSettings
+DefaultPlayerMappableKeyProfileClass=/Script/EnhancedInput.EnhancedPlayerMappableKeyProfile
+DefaultWorldInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+bSendTriggeredEventsWhenInputIsFlushed=True
 bEnableUserSettings=True
+EnhancedInput.EnableDefaultMappingContexts=True
+EnhancedInput.OnlyTriggerLastActionInChord=True
+bLogOnDeprecatedConfigUsed=True
+bEnableWorldSubsystem=False
+EnhancedInput.bShouldLogAllWorldSubsystemInputs=False
 
