--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -104,6 +104,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="L_Lobby")
 +MapsToCook=(FilePath="L_TestTheo")
 +MapsToCook=(FilePath="L_lobby_room")
++MapsToCook=(FilePath="L_TestPA")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
